--- a/src/components/Header/_headers.scss
+++ b/src/components/Header/_headers.scss
@@ -4,10 +4,11 @@
   position: fixed;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   width: 100vw;
   padding: 24px;
-
+  background-color: $third-color;
+  z-index: 2;
   &__logo {
     display: flex;
     align-items: center;
@@ -20,6 +21,22 @@
       font-size: 2rem;
       font-weight: bold;
       color: $secondary-color;
+    }
+  }
+  &__routes {
+    display: flex;
+    font-size: 1.4rem;
+    gap: 16px;
+    font-weight: bold;
+    .routes__route {
+      cursor: pointer;
+      padding-bottom: 4px;
+    }
+    .routes__route:hover {
+      border-bottom: 2px solid $secondary-color;
+    }
+    .routes__route.active {
+      border-bottom: 2px solid $secondary-color;
     }
   }
   &__form {
@@ -57,6 +74,6 @@
     background-color: $secondary-color;
     color: $primary-color;
     padding: 12px 16px;
-    @include borderRadius(12px);
+    @include borderRadius(32px);
   }
 }
