--- a/src/components/MoviePreview/_moviesPreview.scss
+++ b/src/components/MoviePreview/_moviesPreview.scss
@@ -26,24 +26,14 @@
     padding-inline: 24px;
     margin-bottom: 4px;
     span:nth-child(1) {
-      display: -webkit-box;
-      white-space: normal;
-      -webkit-line-clamp: 1;
-      -webkit-box-orient: vertical;
-      text-overflow: ellipsis;
       font-weight: bold;
-      overflow: hidden;
       font-size: 1.4rem;
+      @include lineClamp(1);
     }
     span:nth-child(2) {
       font-size: 1.2rem;
       font-style: italic;
-      display: -webkit-box;
-      white-space: normal;
-      -webkit-line-clamp: 1;
-      -webkit-box-orient: vertical;
-      text-overflow: ellipsis;
-      overflow: hidden;
+      @include lineClamp(1);
     }
   }
   &__stars {
