--- a/src/components/MovieSlider/_movieSliders.scss
+++ b/src/components/MovieSlider/_movieSliders.scss
@@ -19,7 +19,7 @@
     scroll-behavior: smooth;
   }
   &__arrow {
-    width: 80px;
+    min-width: 40px;
     height: 40px;
     cursor: pointer;
     opacity: 0.5;
