--- a/src/components/MovieSlider/_movieSliders.scss
+++ b/src/components/MovieSlider/_movieSliders.scss
@@ -32,3 +32,11 @@
 .MovieSlider__arrow:hover {
   opacity: 1;
 }
+
+@media (max-width: 768px) {
+  .MovieSlider {
+    &__arrow {
+      display: none;
+    }
+  }
+}
