--- a/src/components/CategoriesMenu/_categoriesMenu.scss
+++ b/src/components/CategoriesMenu/_categoriesMenu.scss
@@ -14,10 +14,10 @@
     visibility: visible;
   }
   &__ul {
-    width: 50%;
-    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
+    width: 50%;
+    margin: 0 auto;
     list-style: none;
     padding: 24px;
   }
@@ -34,6 +34,19 @@
     span:hover {
       color: $secondary-color;
       border-bottom: 1px solid $secondary-color;
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .CategoriesMenu {
+    left: 0;
+    max-height: 90vh;
+    &__ul {
+      flex-direction: column;
+      flex-wrap: nowrap;
+      margin: 0;
+      width: 100%;
     }
   }
 }
