--- a/src/components/GenreMovieDetail/_genresMovieDetail.scss
+++ b/src/components/GenreMovieDetail/_genresMovieDetail.scss
@@ -4,6 +4,7 @@
   font-size: 1.8rem;
   padding: 12px;
   border: 1px solid $text-color;
+  max-height: 50px;
   cursor: pointer;
   @include borderRadius(24px);
 }
