--- a/src/screens/MovieScreen/_moviesScreen.scss
+++ b/src/screens/MovieScreen/_moviesScreen.scss
@@ -42,5 +42,14 @@
   &__genres {
     display: flex;
     gap: 12px;
+    flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 767px) {
+  .MovieScreen {
+    margin: 0;
+    justify-content: center;
+    width: 100%;
   }
 }
